rust/macros/tests/invalid/target/debug/deps/comma_sep-249b042d3f603392.d
/Users/hhayk/Exercism/rust/macros/tests/invalid/target/debug/deps/comma_sep-249b042d3f603392.d: comma_sep.rs Cargo.toml

/Users/hhayk/Exercism/rust/macros/tests/invalid/target/debug/deps/libcomma_sep-249b042d3f603392.rmeta: comma_sep.rs Cargo.toml

comma_sep.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
